--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<img src="kadr.jpg" alt="zdjęcia filmowe">
 		</div>
 		<div class="footer">
-			Autor strony: Jan Kupczyk
+			Autor strony: Kacper Jaworowski
 		</div>
 	</div>
 
@@ -52,4 +52,4 @@
 
 </html>
 
-<!-- Jan Kupczyk -->
+<!-- Kacper Jaworowski -->
